--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,35 +1,45 @@
 .no-webp .inicio {
-    background-image: url(../img/header.jpg);
+	background-image: url(../img/header.jpg);
 }
 
 .webp .inicio {
-    background-image: url(../img/header.webp);
+	background-image: url(../img/header.webp);
+}
+
+#logo {
+	@include tablet {
+		max-width: 30rem;
+		height: 10rem;
+	}
 }
 
 .header {
-    background-color: $grisOscuro;
-    padding: 1rem 0 3rem 0;
-    &.inicio {
-        background-position: center center;
-        background-size: cover;
-        @include tablet {
-            min-height: 70rem;
-        }
-    }
+	background-color: $grisOscuro;
+	padding: 1rem 0 3rem 0;
+	&.inicio {
+		background-position: center center;
+		background-size: cover;
+		@include tablet {
+			min-height: 70rem;
+		}
+		.contenido-header {
+			@include tablet {
+				min-height: 70rem;
+			}
+		}
+	}
 }
 
 .contenido-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    @include tablet {
-        min-height: 70rem;
-    }
-    h1 {
-        text-align: left;
-        color: $blanco;
-        font-weight: $bold;
-        line-height: 2;
-        max-width: 60rem;
-    }
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
+	h1 {
+		text-align: left;
+		color: $blanco;
+		font-weight: $bold;
+		line-height: 2;
+		max-width: 60rem;
+	}
 }
